# mdo-hurt-s

./: .gitignore  README.md
moos-ivp-surveyor/: CMakeLists.txt  clean.sh
moos-ivp-surveyor/src/: CMakeLists.txt
moos-ivp-surveyor/src/iM1_8/: CMakeLists.txt  M1_8.cpp  M1_8.h  M1_8_Info.cpp  M1_8_Info.h  Thruster.cpp  Thruster.h  VehRotController.cpp  VehRotController.h  diffThrust.m  iM1_8.moos  main.cpp
moos-ivp-surveyor/src/iM1_8/attic/: M300_BlakeOrig.cpp  M300_BlakeOrig.h  NMEA.cpp  NMEA.h  nmeaDatum.cpp  nmeaDatum.h
moos-ivp-surveyor/src/iM1_8/attic2/: Thruster.cpp  Thruster.h
moos-ivp-surveyor/src/lib_sock_utils/: CMakeLists.txt  SockNinja.cpp  SockNinja.h
